owner confirm trip

--- a/app/views/trip_mailer/create_trip.html.erb
+++ b/app/views/trip_mailer/create_trip.html.erb
@@ -8,7 +8,7 @@
         <p>Para confirmar sua viagem, clique no link abaixo:</p>
         <p></p>
         <p>
-        <a>Confirmar viagem</a>
+        <%= link_to "Confirmar viagem", @confirmation_link %>
         </p>
         <p></p>
         <p>Caso você não saiba do que se trata esse e-mail, apenas ignore esse e-mail.</p>
