--- a/app/views/trip_mailer/create_trip.text.erb
+++ b/app/views/trip_mailer/create_trip.text.erb
@@ -3,6 +3,6 @@ Você solicitou a criação de uma viagem para <%= @destination %> nas datas de 
 
 Para confirmar sua viagem, clique no link abaixo:
 
-Confirmar viagem
+<%= link_to "Confirmar viagem", @confirmation_link %>
 
 Caso você não saiba do que se trata esse e-mail, apenas ignore esse e-mail.
